# why2025-firmware-ch32v203

./: .gitignore  LICENSE  Makefile  README.md  funconfig.h  i2c_master.h  i2c_slave.h  i2c_with_irq_attempt.bak  keyboard.c  keyboard.h  main.c  pmic.c  pmic.h  test.py
src/: CMakeLists.txt
src/application/: CMakeLists.txt  keyboard.c  keyboard.h  main.c  pmic.c  pmic.h  pmic_regs.h  rtc.h
src/freertos/: CMakeLists.txt
src/freertos/configuration/: FreeRTOSConfig.h
src/hal/: CMakeLists.txt  i2c_master.c  i2c_master.h  rtc.c  rtc.h
src/platform/: CMakeLists.txt  funconfig.h  generated_CH32V203C8T6_.ld
